# playwright-electron-node-addon-sample

./: .gitignore  README.md  package-lock.json  package.json
e2e/: .gitignore  collab-test.code-workspace  jest.config.ts  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
e2e/setup/: setup.ts
e2e/specs/: home.spec.ts
electron/: main.js  preload.js
electron/libs/: Test_Module_Mac.node  Test_Module_Windows.lib  Test_Module_Windows.node
native/: CMakeLists.txt  README  module.cpp  package-lock.json  package.json
src/: test-module.js
types/: global.d.ts
web/public/: index.html
